--- a/index.html
+++ b/index.html
@@ -224,10 +224,10 @@
 
   <footer class="white-section" id="footer">
     <div class="container-fluid">
-      <i class="social-option fa-brands fa-linkedin"></i>
-      <i class="social-option fa-brands fa-instagram"></i>
-      <i class="social-option fa-brands fa-facebook"></i>
-      <i class="social-option fa-brands fa-twitter"></i>
+      <a href="https://www.linkedin.com/in/prakhar-pandey-0a15651b4/" target="_blank"><i class="social-option fa-brands fa-linkedin"></i></a>
+      <a href="https://www.instagram.com/prakharpandey04/" target="_blank"><i class="social-option fa-brands fa-instagram"></i></a>
+      <a class="footer-link" href="https://www.facebook.com/profile.php?id=100076456025478" target="_blank"><i class="social-option fa-brands fa-facebook"></i></a>
+      <a class="footer-link" href="https://twitter.com/pandeyprakhar04" target="_blank"><i class="social-option fa-brands fa-twitter"></i></a>
       <p>© Copyright TinDog</p>
     </div>
 
